# Migdal

B1/: exampleB1.cc  run.mac
B1/include/: PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh
B1/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc
B1Migdal/: .exampleB1.cc.swp  CMakeLists.txt  run.mac
B1Migdal/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh
B1Migdal/src/: DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SensitiveDetector.cc
figures/: piechart.py
